<resources>
    <string name="app_name">Christmas Friend</string>
    <string name="start">Start</string>
    <string name="START">start</string>
    <string name="title_activity_name_selector">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_spin">FullscreenActivity</string>
    <string name="ClearIsSelected">clear All is Selected</string>
    <string name="Shake">Shake your phone to get your Christmas Friend !</string>
    <string name="hi">Hi</string>
    <string name="hurray">Hurray !</string>
    <string name="friend_got">You got a Christmas friend. Don\'t forget to buy gifts.</string>
    <string name="friend">Friend</string>
    <string name="is_your_friend">is your friend.</string>
    <string name="ClearIsSelectedBy">Clear All is SelectedBy</string>
    <string name="ClearAll">Clear All From Remote</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="ClearIsSelectedSpecific">CS</string>
    <string name="ClearIsSelectedBySpecific">CSS</string>
    <string name="name">Name</string>
    <string name="showFriendTable">Show Christmas Friends List</string>
</resources>