<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/name"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center">

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <Button
                android:id="@+id/clear_is_selected_specific"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ClearIsSelectedSpecific" />

            <Button
                android:id="@+id/clear_is_selected_by_specific"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ClearIsSelectedBySpecific" />

        </TableRow>

        <Button
            android:id="@+id/clear_is_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ClearIsSelected" />

        <Button
            android:id="@+id/clear_is_selected_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ClearIsSelectedBy" />

        <Button
            android:id="@+id/clear_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ClearAll" />

        <Button
            android:id="@+id/showFriendTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showFriendTable" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>