<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.ChristmasFriend.FullscreenContainer"
    tools:context=".SpinActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/viewName"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/hi"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TextView
                    android:id="@+id/hurray"
                    android:layout_width="300dp"
                    android:layout_height="102dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="248dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/berkshire_swash"
                    android:gravity="center"
                    android:text="@string/hurray"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/congrats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:fontFamily="@font/caveat_bold"
                    android:gravity="center"
                    android:text="@string/friend_got"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hurray" />

                <TextView
                    android:id="@+id/friend_name"
                    android:layout_width="379dp"
                    android:layout_height="85dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/nosifer"
                    android:gravity="center"
                    android:text="@string/friend"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="36sp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/congrats" />

                <TextView
                    android:id="@+id/is_your_friend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:fontFamily="@font/caveat_bold"
                    android:gravity="center"
                    android:text="@string/is_your_friend"
                    android:textColor="@color/material_on_primary_emphasis_medium"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/friend_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/shake"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:text="@string/Shake"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.DeviceDefault.ProgressBar.Small"
                    android:layout_width="404dp"
                    android:layout_height="392dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="260dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:fadingEdge="horizontal|vertical"
                    android:interpolator="@android:interpolator/accelerate_decelerate"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>